misc spacing fixes, reset, base, and overrides

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -37,4 +37,7 @@ h2 {
 p {
    margin-bottom: remCalc(30);
    line-height: 1.5;
+   &:first-of-type {
+      margin-top: remCalc(30);
+   }
 }
