--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -59,6 +59,7 @@ header {
          color: $white;
          font-family: Lobster;
          font-size: 72px;
+         margin: initial;
       }
    }
 }
