--- a/src/sass/states/_overrides.scss
+++ b/src/sass/states/_overrides.scss
@@ -12,3 +12,11 @@
       }
    }
 }
+
+.absolute {
+   position: absolute;
+}
+
+.relative {
+   position: relative;
+}
